# deploy

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.build  LICENSE.md  README.md  SPEC.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.github/actions/deploy/: action.yml  discover_hosts.py
.github/workflows/: ci.yml  deploy.yml  release.yml
docs/: github-actions.md
script/: build-binary  dev  install  lint  serve
site/: docs.html  index.html  nginx.conf  nginx.dev.conf
src/flow_deploy/: __init__.py  cli.py  compose.py  config.py  containers.py  deploy.py  lock.py  log.py  process.py  tags.py  upgrade.py
tests/: conftest.py  test_cli.py  test_compose.py  test_config.py  test_containers.py  test_deploy.py  test_discover_hosts.py  test_lock.py  test_log.py  test_process.py  test_tags.py  test_upgrade.py
